# PT_vines

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml
examples/: plot_sim_study.py  plot_sim_study_mixture.py  plot_sim_study_true.py  pt_copula_v1.ipynb  sample_mixture.ipynb  sim_study_biv_tail.py  sim_study_biv_tail_mixture.py  sim_study_biv_tail_true.py  sim_study_pt.py  tail_copula_clayton.ipynb
latex/: main.tex  mybib.bib  tll_tail_density.tex
notebooks/: sim_study_visualization.ipynb  tail_copula_clayton.ipynb  tll_tail_comp_clayton_new.ipynb
results/: simulation_results.csv
src/npptcop/: __init__.py  bandwidth.py  kde.py  metrics.py  parametric.py  tail.py  transforms.py
srcipts/: sim_study_biv_tail.py
tests/: conftest.py  test_bandwidth.py  test_golden.py  test_invariants.py  test_kde.py  test_metrics.py  test_parametric.py  test_tail.py  test_transforms.py
